package br.com.caio.padroes.comportamentais.observer;

public interface Observer {
    void update(int state);
}